--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
-    "prestart" : "node buildScripts/startMessage.js",
-    "start" : "node buildScripts/srcServer.js"
+    "prestart" : "babel-node buildScripts/startMessage.js",
+    "start" : "babel-node buildScripts/srcServer.js",
+    "lint": "esw webpack.config.* src buildScripts --color"
+
 
   },
   "author": "Cory House",
