--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
-    "prestart" : "babel-node buildScripts/startMessage.js",
-    "start" : "npm-run-all --parallel open-src lint-watch",
+    "prestart": "babel-node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel open-src lint-watch",
     "open-src": "babel-node buildScripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts --color",
-    "lint-watch": "npm run lint -- --watch"
-
-
+    "lint-watch": "npm run lint -- --watch",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
   },
   "author": "Cory House",
   "license": "MIT",
@@ -35,7 +34,7 @@
     "express": "4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
-    "jsdom": "9.8.0",
+    "jsdom": "^9.8.0",
     "json-schema-faker": "0.3.6",
     "json-server": "0.8.22",
     "localtunnel": "1.8.1",
