--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
     - nodejs_version: "6"
 
     # Install scripts. (runs after repo cloning)
-    install:
+    - install:
       # Get the latest stable version of Node.js or io.js
       - ps: Install-Product node $env:nodejs_version
       # include modules
