--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,7 @@ environment:
       nodejs_version: '6'
     -
       install:
-        -
-          ps: 'Install-Product node $env:nodejs_version'
+        - ps: 'Install-Product node $env:nodejs_version'
         - 'npm install'
       test_script:
         - 'node --version'
